Entrega 3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracion TkExecute instlist TkDone
Rule 2     programa -> TkExecute instlist TkDone
Rule 3     term -> TkNum
Rule 4     term -> TkTrue
Rule 5     term -> TkFalse
Rule 6     term -> TkIdent
Rule 7     exp_un -> TkResta exp
Rule 8     exp_un -> TkNegacion exp
Rule 9     exp_un -> TkInspeccion exp
Rule 10    exp -> term
Rule 11    exp -> exp_un
Rule 12    exp -> TkParAbre exp TkParCierra
Rule 13    exp -> TkCorcheteAbre exp TkCorcheteCierra
Rule 14    exp -> TkLlaveAbre exp TkLlaveCierra
Rule 15    exp -> exp TkMas exp
Rule 16    exp -> exp TkMult exp
Rule 17    exp -> exp TkMod exp
Rule 18    exp -> exp TkDiv exp
Rule 19    exp -> exp TkResta exp
Rule 20    exp -> exp TkIgual exp
Rule 21    exp -> exp TkDesigual exp
Rule 22    exp -> exp TkMenor exp
Rule 23    exp -> exp TkMayor exp
Rule 24    exp -> exp TkMenorIgual exp
Rule 25    exp -> exp TkMayorIgual exp
Rule 26    exp -> exp TkDisyuncion exp
Rule 27    exp -> exp TkConjuncion exp
Rule 28    exp -> exp TkConcat exp
Rule 29    instruccion -> TkIdent TkAsignacion exp
Rule 30    instruccion -> TkRead exp
Rule 31    instruccion -> TkWrite exp
Rule 32    instruccion -> TkWhile exp TkDo instlist TkDone
Rule 33    instruccion -> TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
Rule 34    instruccion -> TkFor exp TkTo exp TkDo instlist TkDone
Rule 35    instruccion -> TkIf exp TkThen instlist TkDone
Rule 36    instruccion -> TkIf exp TkThen instlist TkElse instlist TkDone
Rule 37    instruccion -> declaracion TkExecute instlist TkDone
Rule 38    instruccion -> TkExecute instlist TkDone
Rule 39    instruccion -> TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
Rule 40    ident_tape -> TkCorcheteAbre exp TkCorcheteCierra
Rule 41    ident_tape -> TkIdent
Rule 42    lista_tape -> lista_tape simb_tape
Rule 43    lista_tape -> simb_tape
Rule 44    simb_tape -> TkPunto
Rule 45    simb_tape -> TkMayor
Rule 46    simb_tape -> TkMenor
Rule 47    simb_tape -> TkMas
Rule 48    simb_tape -> TkResta
Rule 49    simb_tape -> TkComa
Rule 50    instlist -> instlist semicoloninst
Rule 51    instlist -> instruccion
Rule 52    semicoloninst -> TkPuntoYComa instruccion
Rule 53    declaracion -> TkDeclare declist
Rule 54    declist -> dec TkPuntoYComa declist
Rule 55    declist -> dec
Rule 56    dec -> varlist TkType tipo
Rule 57    varlist -> TkIdent TkComa varlist
Rule 58    varlist -> TkIdent
Rule 59    tipo -> TkInteger
Rule 60    tipo -> TkBoolean
Rule 61    tipo -> TkTape

Terminals, with rules where they appear

TkAsignacion         : 29
TkAt                 : 39
TkBoolean            : 60
TkComa               : 49 57
TkConcat             : 28
TkConjuncion         : 27
TkCorcheteAbre       : 13 40
TkCorcheteCierra     : 13 40
TkDeclare            : 53
TkDesigual           : 21
TkDisyuncion         : 26
TkDiv                : 18
TkDo                 : 32 33 34
TkDone               : 1 2 32 33 34 35 36 37 38
TkElse               : 36
TkExecute            : 1 2 37 38
TkFalse              : 5
TkFor                : 33 34
TkFrom               : 33
TkIdent              : 6 29 33 41 57 58
TkIf                 : 35 36
TkIgual              : 20
TkInspeccion         : 9
TkInteger            : 59
TkLlaveAbre          : 14 39
TkLlaveCierra        : 14 39
TkMas                : 15 47
TkMayor              : 23 45
TkMayorIgual         : 25
TkMenor              : 22 46
TkMenorIgual         : 24
TkMod                : 17
TkMult               : 16
TkNegacion           : 8
TkNum                : 3
TkParAbre            : 12
TkParCierra          : 12
TkPunto              : 44
TkPuntoYComa         : 52 54
TkRead               : 30
TkResta              : 7 19 48
TkTape               : 61
TkThen               : 35 36
TkTo                 : 33 34
TkTrue               : 4
TkType               : 56
TkWhile              : 32
TkWrite              : 31
error                : 

Nonterminals, with rules where they appear

dec                  : 54 55
declaracion          : 1 37
declist              : 53 54
exp                  : 7 8 9 12 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 31 32 33 33 34 34 35 36 40
exp_un               : 11
ident_tape           : 39
instlist             : 1 2 32 33 34 35 36 36 37 38 50
instruccion          : 51 52
lista_tape           : 39 42
programa             : 0
semicoloninst        : 50
simb_tape            : 42 43
term                 : 10
tipo                 : 56
varlist              : 56 57

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracion TkExecute instlist TkDone
    (2) programa -> . TkExecute instlist TkDone
    (53) declaracion -> . TkDeclare declist

    TkExecute       shift and go to state 2
    TkDeclare       shift and go to state 4

    programa                       shift and go to state 3
    declaracion                    shift and go to state 1

state 1

    (1) programa -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 5


state 2

    (2) programa -> TkExecute . instlist TkDone
    (50) instlist -> . instlist semicoloninst
    (51) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (39) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (53) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 12
    declaracion                    shift and go to state 16

state 3

    (0) S' -> programa .



state 4

    (53) declaracion -> TkDeclare . declist
    (54) declist -> . dec TkPuntoYComa declist
    (55) declist -> . dec
    (56) dec -> . varlist TkType tipo
    (57) varlist -> . TkIdent TkComa varlist
    (58) varlist -> . TkIdent

    TkIdent         shift and go to state 19

    varlist                        shift and go to state 18
    dec                            shift and go to state 20
    declist                        shift and go to state 17

state 5

    (1) programa -> declaracion TkExecute . instlist TkDone
    (50) instlist -> . instlist semicoloninst
    (51) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (39) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (53) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 21
    declaracion                    shift and go to state 16

state 6

    (35) instruccion -> TkIf . exp TkThen instlist TkDone
    (36) instruccion -> TkIf . exp TkThen instlist TkElse instlist TkDone
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 32
    exp_un                         shift and go to state 29

state 7

    (30) instruccion -> TkRead . exp
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 35
    exp_un                         shift and go to state 29

state 8

    (29) instruccion -> TkIdent . TkAsignacion exp

    TkAsignacion    shift and go to state 36


state 9

    (32) instruccion -> TkWhile . exp TkDo instlist TkDone
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 37
    exp_un                         shift and go to state 29

state 10

    (33) instruccion -> TkFor . TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> TkFor . exp TkTo exp TkDo instlist TkDone
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkIdent         shift and go to state 38
    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 39
    exp_un                         shift and go to state 29

state 11

    (51) instlist -> instruccion .

    TkDone          reduce using rule 51 (instlist -> instruccion .)
    TkPuntoYComa    reduce using rule 51 (instlist -> instruccion .)
    TkElse          reduce using rule 51 (instlist -> instruccion .)


state 12

    (2) programa -> TkExecute instlist . TkDone
    (50) instlist -> instlist . semicoloninst
    (52) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 42
    TkPuntoYComa    shift and go to state 40

    semicoloninst                  shift and go to state 41

state 13

    (38) instruccion -> TkExecute . instlist TkDone
    (50) instlist -> . instlist semicoloninst
    (51) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkFor exp TkTo exp TkDo instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkDone
    (36) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (37) instruccion -> . declaracion TkExecute instlist TkDone
    (38) instruccion -> . TkExecute instlist TkDone
    (39) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (53) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 43
    declaracion                    shift and go to state 16

state 14

    (39) instruccion -> TkLlaveAbre . lista_tape TkLlaveCierra TkAt ident_tape
    (42) lista_tape -> . lista_tape simb_tape
    (43) lista_tape -> . simb_tape
    (44) simb_tape -> . TkPunto
    (45) simb_tape -> . TkMayor
    (46) simb_tape -> . TkMenor
    (47) simb_tape -> . TkMas
    (48) simb_tape -> . TkResta
    (49) simb_tape -> . TkComa

    TkPunto         shift and go to state 45
    TkMayor         shift and go to state 47
    TkMenor         shift and go to state 48
    TkMas           shift and go to state 50
    TkResta         shift and go to state 44
    TkComa          shift and go to state 46

    simb_tape                      shift and go to state 49
    lista_tape                     shift and go to state 51

state 15

    (31) instruccion -> TkWrite . exp
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 52
    exp_un                         shift and go to state 29

state 16

    (37) instruccion -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 53


state 17

    (53) declaracion -> TkDeclare declist .

    TkExecute       reduce using rule 53 (declaracion -> TkDeclare declist .)


state 18

    (56) dec -> varlist . TkType tipo

    TkType          shift and go to state 54


state 19

    (57) varlist -> TkIdent . TkComa varlist
    (58) varlist -> TkIdent .

    TkComa          shift and go to state 55
    TkType          reduce using rule 58 (varlist -> TkIdent .)


state 20

    (54) declist -> dec . TkPuntoYComa declist
    (55) declist -> dec .

    TkPuntoYComa    shift and go to state 56
    TkExecute       reduce using rule 55 (declist -> dec .)


state 21

    (1) programa -> declaracion TkExecute instlist . TkDone
    (50) instlist -> instlist . semicoloninst
    (52) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 57
    TkPuntoYComa    shift and go to state 40

    semicoloninst                  shift and go to state 41

state 22

    (7) exp_un -> TkResta . exp
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 58
    exp_un                         shift and go to state 29

state 23

    (4) term -> TkTrue .

    TkMas           reduce using rule 4 (term -> TkTrue .)
    TkMult          reduce using rule 4 (term -> TkTrue .)
    TkMod           reduce using rule 4 (term -> TkTrue .)
    TkDiv           reduce using rule 4 (term -> TkTrue .)
    TkResta         reduce using rule 4 (term -> TkTrue .)
    TkIgual         reduce using rule 4 (term -> TkTrue .)
    TkDesigual      reduce using rule 4 (term -> TkTrue .)
    TkMenor         reduce using rule 4 (term -> TkTrue .)
    TkMayor         reduce using rule 4 (term -> TkTrue .)
    TkMenorIgual    reduce using rule 4 (term -> TkTrue .)
    TkMayorIgual    reduce using rule 4 (term -> TkTrue .)
    TkDisyuncion    reduce using rule 4 (term -> TkTrue .)
    TkConjuncion    reduce using rule 4 (term -> TkTrue .)
    TkConcat        reduce using rule 4 (term -> TkTrue .)
    TkThen          reduce using rule 4 (term -> TkTrue .)
    TkDone          reduce using rule 4 (term -> TkTrue .)
    TkPuntoYComa    reduce using rule 4 (term -> TkTrue .)
    TkElse          reduce using rule 4 (term -> TkTrue .)
    TkDo            reduce using rule 4 (term -> TkTrue .)
    TkTo            reduce using rule 4 (term -> TkTrue .)
    TkParCierra     reduce using rule 4 (term -> TkTrue .)
    TkLlaveCierra   reduce using rule 4 (term -> TkTrue .)
    TkCorcheteCierra reduce using rule 4 (term -> TkTrue .)


state 24

    (8) exp_un -> TkNegacion . exp
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 59
    exp_un                         shift and go to state 29

state 25

    (5) term -> TkFalse .

    TkMas           reduce using rule 5 (term -> TkFalse .)
    TkMult          reduce using rule 5 (term -> TkFalse .)
    TkMod           reduce using rule 5 (term -> TkFalse .)
    TkDiv           reduce using rule 5 (term -> TkFalse .)
    TkResta         reduce using rule 5 (term -> TkFalse .)
    TkIgual         reduce using rule 5 (term -> TkFalse .)
    TkDesigual      reduce using rule 5 (term -> TkFalse .)
    TkMenor         reduce using rule 5 (term -> TkFalse .)
    TkMayor         reduce using rule 5 (term -> TkFalse .)
    TkMenorIgual    reduce using rule 5 (term -> TkFalse .)
    TkMayorIgual    reduce using rule 5 (term -> TkFalse .)
    TkDisyuncion    reduce using rule 5 (term -> TkFalse .)
    TkConjuncion    reduce using rule 5 (term -> TkFalse .)
    TkConcat        reduce using rule 5 (term -> TkFalse .)
    TkThen          reduce using rule 5 (term -> TkFalse .)
    TkDone          reduce using rule 5 (term -> TkFalse .)
    TkPuntoYComa    reduce using rule 5 (term -> TkFalse .)
    TkElse          reduce using rule 5 (term -> TkFalse .)
    TkDo            reduce using rule 5 (term -> TkFalse .)
    TkTo            reduce using rule 5 (term -> TkFalse .)
    TkParCierra     reduce using rule 5 (term -> TkFalse .)
    TkLlaveCierra   reduce using rule 5 (term -> TkFalse .)
    TkCorcheteCierra reduce using rule 5 (term -> TkFalse .)


state 26

    (3) term -> TkNum .

    TkMas           reduce using rule 3 (term -> TkNum .)
    TkMult          reduce using rule 3 (term -> TkNum .)
    TkMod           reduce using rule 3 (term -> TkNum .)
    TkDiv           reduce using rule 3 (term -> TkNum .)
    TkResta         reduce using rule 3 (term -> TkNum .)
    TkIgual         reduce using rule 3 (term -> TkNum .)
    TkDesigual      reduce using rule 3 (term -> TkNum .)
    TkMenor         reduce using rule 3 (term -> TkNum .)
    TkMayor         reduce using rule 3 (term -> TkNum .)
    TkMenorIgual    reduce using rule 3 (term -> TkNum .)
    TkMayorIgual    reduce using rule 3 (term -> TkNum .)
    TkDisyuncion    reduce using rule 3 (term -> TkNum .)
    TkConjuncion    reduce using rule 3 (term -> TkNum .)
    TkConcat        reduce using rule 3 (term -> TkNum .)
    TkThen          reduce using rule 3 (term -> TkNum .)
    TkDone          reduce using rule 3 (term -> TkNum .)
    TkPuntoYComa    reduce using rule 3 (term -> TkNum .)
    TkElse          reduce using rule 3 (term -> TkNum .)
    TkDo            reduce using rule 3 (term -> TkNum .)
    TkTo            reduce using rule 3 (term -> TkNum .)
    TkParCierra     reduce using rule 3 (term -> TkNum .)
    TkLlaveCierra   reduce using rule 3 (term -> TkNum .)
    TkCorcheteCierra reduce using rule 3 (term -> TkNum .)


state 27

    (12) exp -> TkParAbre . exp TkParCierra
    (10) exp -> . term
    (11) exp -> . exp_un
    (12) exp -> . TkParAbre exp TkParCierra
    (13) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (14) exp -> . TkLlaveAbre exp TkLlaveCierra
    (15) exp -> . exp TkMas exp
    (16) exp -> . exp TkMult exp
    (17) exp -> . exp TkMod exp
    (18) exp -> . exp TkDiv exp
    (19) exp -> . exp TkResta exp
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkTrue
    (5) term -> . TkFalse
    (6) term -> . TkIdent
    (7) exp_un -> . TkResta exp
    (8) exp_un -> . TkNegacion exp
    (9) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkNum           shift and go to state 26
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 60
    exp_un                         shift and go to state 29

state 28

    (6) term -> TkIdent .

    TkMas           reduce using rule 6 (term -> TkIdent .)
    TkMult          reduce using rule 6 (term -> TkIdent .)
    TkMod           reduce using rule 6 (term -> TkIdent .)
    TkDiv           reduce using rule 6 (term -> TkIdent .)
    TkResta         reduce using rule 6 (term -> TkIdent .)
    TkIgual         reduce using rule 6 (term -> TkIdent .)
    TkDesigual      reduce using rule 6 (term -> TkIdent .)
    TkMenor         reduce using rule 6 (term -> TkIdent .)
    TkMayor         reduce using rule 6 (term -> TkIdent .)
    TkMenorIgual    reduce using rule 6 (term -> TkIdent .)
    TkMayorIgual    reduce using rule 6 (term -> TkIdent .)
    TkDisyuncion    reduce using rule 6 (term -> TkIdent .)
    TkConjuncion    reduce using rule 6 (term -> TkIdent .)
    TkConcat        reduce using rule 6 (term -> TkIdent .)
    TkThen          reduce using rule 6 (term -> TkIdent .)
    TkDone          reduce using rule 6 (term -> TkIdent .)
    TkPuntoYComa    reduce using rule 6 (term -> TkIdent .)
    TkElse          reduce using rule 6 (term -> TkIdent .)
    TkDo            reduce using rule 6 (term -> TkIdent .)
    TkTo            reduce using rule 6 (term -> TkIdent .)
    TkParCierra     reduce using rule 6 (term -> TkIdent .)
    TkLlaveCierra   reduce using rule 6 (term -> TkIdent .)
    TkCorcheteCierra reduce using rule 6 (term -> TkIdent .)


state 29

    (11) exp -> exp_un .
